# cozmo-voice-agent

./: .env.example  .firebaserc  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  firebase.json  pyproject.toml  run_client.py
docs/: architecture.md  call-flow.md  livekit-vs-pipecat.md  scaling-plan.md  scaling-to-1000.md
functions/: index.js  package-lock.json  package.json
infra/: livekit-server.yaml  prometheus.yml  redis.conf  sip-trunk-config.json  twilio-setup.sh
infra/grafana/dashboards/: voice-agent.json
infra/grafana/provisioning/: dashboards.yaml
public/: index.html
public/client/: app.js  bundle.js  index.html  multi.html  package-lock.json  package.json
public/demo/: index.html
scripts/: run_load_test.sh  seed_knowledge.py  setup.sh
src/: agent.py  dashboard.py  load_test.py  main.py  server.py
src/db/: orders.py
src/knowledge/: ingest.py  search.py  vectordb.py
src/knowledge/documents/: objection_handling.md  product_info.md  refund_policy.md
src/metrics/: call_quality.py  collector.py  latency.py
src/pipeline/: llm.py  stt.py  tts.py  vad.py
src/prompts/: system_prompt.py
src/resilience/: recovery.py
src/state/: call_state.py
src/tools/: knowledge_lookup.py
tests/: conftest.py  test_knowledge.py  test_metrics.py
tests/load/: load_test.py
